--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -13,7 +13,7 @@
 						<form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
 							<div class="row">
 								<div class="col-sm-6 col-md-3">
-									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="File Name/Table ID" />
+									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="File Name or Table ID" />
 								</div>
 								<div class="col-auto">
 									<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
