--- a/src/main/resources/templates/views/adm/usr/ADMUSR002M0.html
+++ b/src/main/resources/templates/views/adm/usr/ADMUSR002M0.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 	<div class="page-wrapper" id="page-wrapper">
 		<div class="container" id="container">
 			<h2>[[${menuNm}]]</h2>
 			<div class="ptag-container">
-				<!-- <span><a href="#"> Home ></a></span> -->
 				<span>[[${navigator}]]</span>
 				<div class="form-container">
 					<div class="form-box">
 						<form id="filter-form" name="form" method="post" action="/ADMUSR002M0SelectList" onsubmit="return false;">
 							<div class="row align-items-center">
 								<div class="col-auto">
-									<!-- 사용자ID/명 -->
-									<label for="lblUsrIdNm" class="form-label">User ID/Name : </label>
-									<input id="inpUsrIdNm" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="Input Name" />
+									<label for="lblUsrIdNm" class="form-label">User ID or Name : </label>
+									<input id="inpUsrIdNm" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="ID or Name" />
 								</div>
 								<div class="col-auto">
-									<!-- 상태구분코드 -->
 									<label for="lblStatDvCd" class="form-label">Status : </label>
-									<select id="selStatDvCd" style="padding: 3px" class="form-select select-options p-1">
-										<option selected="selected" value="">- select -</option>
+									<select id="selStatDvCd" style="padding-left: 10px" class="form-select select-options p-1">
+										<option selected="selected" value=""></option>
 									</select>
 								</div>
 								<div class="col-auto">
@@ -37,8 +34,7 @@
 						</form>
 					</div>
 				</div>
-				<div style="padding-top: 2em"></div>
-				<div class="card card-md" id="divMyGrid">
+				<div class="card card-md mt-4" id="divMyGrid">
 				</div>
 			</div>
 			<div class="popupDataForm">
@@ -114,8 +110,8 @@
 			
 				gf_Transaction(option, fn_callback );
 			}
-			
-		</script>
+	</script>
+
 	<script>
 
 		    // 페이지 로드 시 옵션을 초기화
@@ -170,24 +166,24 @@
 			
 			var usrDvCdList  = { 2:"Administrator"
 					           , 3:"User" };
-			var statDvCdList = { 0:"Normal use"
-					           , 4:"Request Password Reset"
-					           , 9:"Suspension of use" };
+			var statDvCdList = { 0:"Active"
+					           , 4:"Temporary password"
+					           , 9:"Inactive" };
 			
 			var columns = [
 							{ id: unqId,			name: "Seq",					field: unqId,								width: 60, 	editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-						, { id: "usrDvCd",			name: "User identifier code",	field: "usrDvCd",			sortable: true, width: 160, editor: gf_Select2Editor  , formatter: gf_Select2Formatter, dataSource: usrDvCdList, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-						, { id: "usrId",			name: "User email",	 			field: "usrId",				sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
-						, { id: "oldUsrId",			name: "User email",	 			field: "oldUsrId",			sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, hidden:true, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
-						, { id: "usrNm",			name: "User name",	 			field: "usrNm",				sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
-						, { id: "usrEmail",			name: "User email",				field: "usrEmail",			sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, hidden:true, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" }
-						, { id: "usrPhNo",			name: "User phone number",		field: "usrPhNo",			sortable: true, width: 160, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-						, { id: "usrDeptNm",		name: "User team name",			field: "usrDeptNm",			sortable: true, width: 160, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "usrDvCd",			name: "Classification",	field: "usrDvCd",			sortable: true, width: 160, editor: gf_Select2Editor  , formatter: gf_Select2Formatter, dataSource: usrDvCdList, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "usrId",			name: "ID",	 			field: "usrId",				sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "oldUsrId",			name: "e-mail",	 			field: "oldUsrId",			sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, hidden:true, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "usrNm",			name: "Name",	 			field: "usrNm",				sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "usrEmail",			name: "e-mail",				field: "usrEmail",			sortable: true, width: 200, editor: Slick.Editors.Text, validator: createValidator, hidden:true, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "usrPhNo",			name: "Phone Number",		field: "usrPhNo",			sortable: true, width: 160, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "usrDeptNm",		name: "Team Name",			field: "usrDeptNm",			sortable: true, width: 160, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 						, { id: "statDvCd",	 		name: "Status",					field: "statDvCd",	 		sortable: true, width: 100, editor: gf_Select2Editor  , formatter: gf_Select2Formatter, dataSource: statDvCdList, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 						, { id: "oldStatDvCd",		name: "Status",					field: "oldStatDvCd",		sortable: true, width: 100, editor: Slick.Editors.Text, validator: createValidator, hidden:true, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-						, { id: "useStrDtm",		name: "Use start date",			field: "useStrDtm",			sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-						, { id: "useEndDtm",		name: "Use end date",			field: "useEndDtm",			sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
-						, { id: "passwordUpdDtm",	name: "Password update date",	field: "passwordUpdDtm",	sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "useStrDtm",		name: "Start Date of Use",			field: "useStrDtm",			sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "useEndDtm",		name: "End Date of Use",			field: "useEndDtm",			sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
+						, { id: "passwordUpdDtm",	name: "Password Update Date",	field: "passwordUpdDtm",	sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }
 						];
 	
 			var options = {
@@ -403,9 +399,9 @@
 				];
 				
 				let selStatDvCd = [
-					  { column: "statDvCd", value: "0", text: "Normal use" }
-					, { column: "statDvCd", value: "4", text: "Request Password Reset" }
-					, { column: "statDvCd", value: "9", text: "Suspension of use" }
+					  { column: "statDvCd", value: "0", text: "Active" }
+					, { column: "statDvCd", value: "4", text: "Temporary password" }
+					, { column: "statDvCd", value: "9", text: "Inactive" }
 				];
 				
 				//console.log("options6 in the console:", options6);
@@ -436,7 +432,7 @@
 		        
 		        // alert for the edit popup if the user doesn't select the column value in the grid
 		        if ((modalType === "edit" && !dataContext) || !activeCell || !column) {
-		          alert("Please select a cell to edit the data.");
+		          alert("Please select a row to edit the data.");
 		          return;
 		        }
 		        
@@ -803,7 +799,7 @@
 		        // 기본 옵션 추가
 		        var defaultOption = document.createElement("option");
 		        defaultOption.value = "";
-		        defaultOption.text = "- select -";
+		        defaultOption.text = "All";
 		        statDvCdSelect.appendChild(defaultOption);
 
 		        // statDvCdList에 있는 값을 select 옵션으로 추가
