--- a/src/main/resources/templates/views/biz/ins/BIZINS002M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS002M0.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 	<div class="page-wrapper" id="page-wrapper">
@@ -13,17 +13,11 @@
 							<div class="row">
 								<!-- Year Select -->
 								<div class="col-auto">
-									<label class="form-label">Standard Year/Month:</label>
+									<label class="form-label">Standard Year / Month :</label>
 									<select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
 									<option selected value="">- Year -</option>
 									<!-- Year Options -->
-										<option value="2020">2020</option>
-										<option value="2021">2021</option>
-										<option value="2022">2022</option>
-										<option value="2023">2023</option>
 										<option value="2024">2024</option>
-										<option value="2025">2025</option>
-										<option value="2026">2026</option>
 									</select>
 								</div>
 								<!-- Month Select -->
