--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<!-- <div class="page"> -->
 	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
@@ -15,9 +15,9 @@
 						<form id="filter-form" name="form" method="post" action="/WRKFIL002M0SelectList" onsubmit="return false;">
 							<div class="row">
 								<div class="col-auto">
-									<label class="form-label" for="fileDropdown"> Select a file:</label>
+									<label class="form-label" for="fileDropdown">File Name :</label>
 									<select class="form-select" id="fileDropdown" style="padding: 3px">
-										<option value="">- options -</option>
+										<option value="">- File -</option>
 									</select>
 								</div>
 								<div class="col text-end">
@@ -254,7 +254,7 @@
 			{ id: "vlvlVrfYn",	name: "Validation Use",			field: "vlvlVrfYn",	width: 80,	sortable: true, editor: function (args) { return new ComboBoxEditor(args, [{ key: "Y", value: "Y" }, { key: "N", value: "N" } ]);}, headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
 			{ id: "vlvlCd",		name: "Validation Code",		field: "vlvlCd",	width: 100,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" },
 			{ id: "ordSeq",		name: "Sort",					field: "ordSeq",	width: 60,	sortable: true, editor: Slick.Editors.Text, validator: (value, args) => complexValidator(value, args, [ createValidator, noWhitespaceValidator ]), headerCssClass: "slick-header-columns", cssClass: "slick-column-center"},
-			{ id: "itmDsc",		name: "Desc",					field: "itmDsc",	width: 170,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" },
+			{ id: "itmDsc",		name: "Description",					field: "itmDsc",	width: 170,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-left" },
 			{ id: "selBasYn",	name: "Load Standard (Y/N)",	field: "selBasYn",	width: 120,	sortable: true, editor: Slick.Editors.Text, headerCssClass: "slick-header-columns", cssClass: "slick-column-center" }];
 
 		var options = {
