--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
 	<div class="page-wrapper" id="page-wrapper">
 		<div class="container" id="'container">
@@ -12,17 +12,11 @@
 							<div class="row align-items-center">
 								<!-- Year Select -->
 								<div class="col-auto">
-									<label class="form-label"> Standard Year/Month </label>
+									<label class="form-label"> Standard Year / Month :</label>
 									<select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
 										<option selected value="">- Year -</option>
 										<!-- Year Options -->
-										<option value="2020">2020</option>
-										<option value="2021">2021</option>
-										<option value="2022">2022</option>
-										<option value="2023">2023</option>
 										<option value="2024">2024</option>
-										<option value="2025">2025</option>
-										<option value="2026">2026</option>
 									</select>
 								</div>
 								<!-- Month Select -->
@@ -47,9 +41,9 @@
 								</div>
 								<!-- Options Select  -->
 								<div class="col-auto">
-									<label class="form-label"> Select a file: </label>
+									<label class="form-label">File Name : </label>
 									<select id="cmbUploadFileList" name="cmbUploadFileList" required class="form-select select-options p-1">
-										<option selected value="">- select -</option>
+										<option selected value="">- File -</option>
 										<!-- options here -->
 									</select>
 								</div>
@@ -196,16 +190,16 @@
 			element.innerHTML = "";
 
 			if ( $("#inputMonth").val() === "" && $("#inputYear").val() === "" && $("#cmbUploadFileList").val() === "" ) {
-				alert("Please select a month, year, and a file!");
+				alert("Please select a standard year / month and a file.");
 			return false;
 			} else if ( $("#inputYear").val() === "" ) {
-				alert("Please select a year to continue!");
+				alert("Please select a year.");
 			return false;
 			} else if ($("#inputMonth").val() === "") {
-				alert("Please select a month to continue!");
+				alert("Please select a month.");
 			return false;
 			} else if ($("#cmbUploadFileList").val() === "") {
-				alert("Please select a file to continue!");
+				alert("Please select a file.");
 			return false;
 			}
 			
@@ -240,7 +234,7 @@
 						console.log("SaveUplFileList grid");
 						//console.log("fn_callback result received:", result);
 						if ( result.data.resultCode == "200" ) {
-							alert("File upload success");
+							alert("Your file has been uploaded successfully.");
 
 							var agent = navigator.userAgent.toLowerCase();
 							//파일초기화
@@ -286,7 +280,7 @@
 
 				console.log("SlickGrid initialized.");
 			} else {
-				alert("No data is found, please select another date");
+				alert("No data, please select another option.");
 				console.log("No data returned from the server.");
 			}
 			
@@ -385,13 +379,13 @@
 			const year = document.getElementById("inputYear").value;
 			const month = document.getElementById("inputMonth").value;
 			if (!year || !month) {
-				alert("Please select both year and month before downloading.");
+				alert("Please select the standard year / month to download.");
 				return;
 			}
 			const currDate = year + month.padStart(2, "0");
 			const selectedFile = $("#cmbUploadFileList").val();
 			if (!selectedFile) {
-				alert("Please select a file before downloading.");
+				alert("Please select the file to download.");
 				return;
 			}
 			const fileName = `WRKFIL003_FM_${currDate}_${selectedFile}.xlsx`;
@@ -409,23 +403,23 @@
 			console.log("Sending AJAX request...");
 			
 			if ( $("#inputMonth").val() === "" && $("#inputYear").val() === "" && $("#cmbUploadFileList").val() === "" ) {
-				alert("Please select a month, year, and a file!");
+				alert("Please select a standard year / month and a file.");
 			return false;
 			} else if ( $("#inputYear").val() === "" ) {
-				alert("Please select a year to continue!");
+				alert("Please select a year.");
 			return false;
 			} else if ($("#inputMonth").val() === "") {
-				alert("Please select a month to continue!");
+				alert("Please select a month.");
 			return false;
 			} else if ($("#cmbUploadFileList").val() === "") {
-				alert("Please select a file to continue!");
+				alert("Please select a file.");
 			return false;
 			}
 	
 			//let form = $('#uploadFrm')[0];
 			//let frmData = new FormData(form);
 			
-			if(confirm("Do you want to upload file?") == false) {
+			if(confirm("Do you want to upload this file?") == false) {
 				return false;
 			}
 			
